samples/_failures_safe/1761625952_ec4603_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0a3d7510.c: In function ‘tokenize_string’:
./samples/SAFE/__tmp_0a3d7510.c:170:5: error: expected declaration or statement at end of input
  170 |     }
      |     ^
